# actix-htmx

./: .env  .gitignore  Cargo.toml  README.md  database.db  diesel.toml  seed.py
migrations/2025-03-09-212252_create_user/: up.sql
migrations/2025-05-06-233730_add_user/: up.sql
migrations/2025-05-06-234346_add_pets/: down.sql  up.sql
scripts/: seed.py
src/: main.rs
src/api/: mod.rs  models.rs
src/api/migrations/2025-03-09-212252_create_user/: up.sql
src/api/users/: mod.rs  users_service.rs  users_views.rs
src/api/views/: index.rs
src/config/: app.rs
src/database/: connection.rs
src/errors/: user.rs
src/forms/: mod.rs  pet.rs  user.rs
src/middlewares/: middlewares.rs
src/models/: models.rs  pet.rs  user.rs
src/repositories/: mod.rs
src/routes/: pet.rs  user.rs
src/schema/: schema.rs
src/services/: mod.rs  pets.rs  user.rs
src/users/: mod.rs  users_service.rs  users_views.rs
src/views/: index.rs  mod.rs  user.rs
src/views/api/: pets.rs  user.rs
static/css/: base.css
static/js/common/: requests.js
templates/: base.html  index.html
templates/index/: index.html
templates/index/partials/: users_table.html
