[package]
name = "actix_example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tera = "1"
lazy_static = "1.5.0"
actix-files = "0.6.6"
rand = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1"
futures = "0.3"
env_logger = "0.11.6"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
# curl --proto '=https' --tlsv1.2 -LsSf https://github.com/diesel-rs/diesel/releases/latest/download/diesel_cli-installer.sh | sh
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
