[package]
name = "actix_example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tera = "1"
lazy_static = "1.5.0"
actix-files = "0.6.6"
rand = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1"
futures = "0.3"
env_logger = "0.11.6"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] }
dotenvy = "0.15"
thiserror = "2.0.11"
log = "0.4.26"
tokio = "1.43.0"
